# midichi

./: .gitignore  README.md  pyproject.toml
midich/core/: rules.py
src/: generate.py  prepare_data.py  train.py
src/utils/: logger.py
