[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midich"
version = "0.1.0"
description = "Консольный расклад по системе Мидичи"
authors = [{ name="Akio", email="lazzycatto@yandex.com" }]
dependencies = ["termcolor"]
requires-python = ">=3.8"

[project.scripts]
midich = "midich.main:main"
